--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ document.write("<a href=mailto:"+nic+at+dom+">WRITE US HERE</a>");
 <!-- Right Column end -->
 
 <!-- Footer -->
-<br /><div class="footnote"><img src="./img/3.gif" width="1000px" height="50px" alt="" /></div>
+<br /><div class="footnote"><img src="./3.gif" width="1000px" height="50px" alt="" /></div>
 </div>
 <div class="clearit" />
 <!-- Footer -->
