--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 	<br>
 	<span class="title">ART IS ALL OVER!</span><br><span class="subt">(WE'RE RETIRED!)</span><br><br>
 	Well, the art may all be over but the memories live on forever<br>in our final release – a bookwork detailing 10 years of Phonoréalisme. 
-<br><span class="booktitle"><a href="http://cedartavernsingers.tictail.com" alt="shop" target="_blank">Greatest Art Hitstory</a></span> is a 212 page hardcover containing documentation, lyrics, activities, and various other things we've dug out of the archives.
+<br><span class="booktitle">Greatest Art Hitstory</span> is a 212 page hardcover containing documentation, lyrics, activities, and various other things we've dug out of the archives.
 	Own this piece of history for yourself and you'll be able to flip wistfully through its pages and think to yourself, "Ha ha, remember when that happened...?" Or, "Wow, why was that ever a good idea?" Or, "Geez, I can't believe this was legal back then!" 
 	Thanks to everyone who followed us along this journey!
 	<br><br>
 	Limited edition of 50! Shipping July 31, 2017!
 	<br>
-	<a href="http://cedartavernsingers.tictail.com" alt="shop" target="_blank">Click here to order your copy today!
+	Email us at thephonorealistes (at) gmail (dot) com to order your copy today!
 	<br>
 	<img src="img/gah.gif" width="100px" height="auto" alt="Greatest Art Hitstory" />
 	</a>
